# ELECTRICAL_POWER_CUFE

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  MyProject.sln  PICKLE_RICK.txt  PROJEC_GUIDE.txt  ReadMe.md  ReadMe.txt  WORKFLOW.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  energy_monitor.vcxproj  energy_monitor.vcxproj.filters
OCTAVE TEST SIGNALS/: config.yaml  current.csv  octave-workspace  octavePlot.m  octavePlot_multipleWave.m  power.csv  signals_generator.m  volt.csv
UXbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  d  energy_monitor
doc/: class__signal__operation-members.html  class__voltage-members.html  classappliance.html  classdata_table-members.html  classhysteresis.html  classpdf__wrap-members.html  classsignal.html  classtimer__counter.html  core_8cpp.html  data_table_8h.html  data_table_8h_source.html  dir_9318b1a3c67c9147de96cb6db7cdb38f.html  features_8h_source.html  functions.html  functions_enum.html  functions_rela.html  functions_type.html  functions_vars.html  globals_func.html  setting_8h.html  signal_8cpp.html  structprocess__feedback.html  structsignal_1_1__analytics-members.html
doc/search/: all_3.js  all_c.js  all_e.js  classes_7.js  defines_1.js  defines_2.js  defines_7.js  enumvalues_2.js  enumvalues_4.js  enumvalues_7.js  functions_0.js  functions_3.js  functions_6.js  functions_b.js  functions_d.js  variables_6.js  variables_8.js  variables_b.js
docs/: annotated.html  annotated_dup.js  appliances_8h.html  appliances_8h.js  appliances_8h_source.html  class__current-members.html  class__current.html  class__current.js  class__power-members.html  class__power.html  class__power.js  class__settings-members.html  class__settings.html  class__settings.js  class__signal__operation-members.html  class__signal__operation.html  class__signal__operation.js  class__voltage-members.html  class__voltage.html  class__voltage.js  classappliance-members.html  classappliance.html  classappliance.js  classdata_table-members.html  classdata_table.html  classdata_table.js  classes.html  classhysteresis-members.html  classhysteresis.html  classhysteresis.js  classmode-members.html  classmode.html  classmode.js  classpdf__wrap-members.html  classpdf__wrap.html  classpdf__wrap.js  classsignal-members.html  classsignal.html  classsignal.js  classsignal__bus.html  (+168 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  defines_7.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  (+50 more)
documentation/html/: appliances_8h.html  class__current.html  class__power-members.html  class__signal__operation.html  classdata_table.html  classhysteresis-members.html  classpdf__wrap.html  classsource.html  core_8cpp_source.html  data___i_o_8cpp_source.html  default_setting_8h.html  default_setting_8h_source.html  dir_685d5d2561c225625d0d36d7ae537885.html  dir_e595c759abaf95f12580ac1fd1329158.html  dir_f175d2e7fddd7ab5c6761250f72b4b8c.html  energy__monitor__cli_8cpp.html  energy__monitor__cli_8cpp_source.html  files.html  functions_eval.html  functions_func.html  index.html  (+14 more)
resources/: terminalOutput.txt
src/: WORKFLOW.txt  doxygen_log.txt  energy_monitor.cpp  energy_monitor_cli.cpp  energy_monitor_cli.h
tests/: FILE_MANIPULATION_EXAMPLE  SEMI_FULL_TEST_1.cpp  SEMI_FULL_TEST_2.cpp  SEMI_FULL_TEST_3.cpp  SEMI_FULL_TEST_4.cpp  data_IO_test.cpp
winBuild/: ALL_BUILD.vcxproj  CMakeCache.txt  MyProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  energy_monitor.vcxproj  energy_monitor.vcxproj.filters
(+64 files in other folders)
